--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -10,22 +10,36 @@
     <meta name="description" content="{% block meta_description %}{% endblock %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
 </head>
 
 <body>
-    <!-- Верхній навбар -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success py-2">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="{% url 'home' %}">ROZETKA</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="mainNavbar">
+            
+            
+            <nav class="navbar navbar-expand-lg navbar-dark bg-success py-2" style="padding: 10px;">
+                <div class="container-fluid">            
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="d-flex ms-auto">
+                        <a class="nav-link" href="{% url 'home' %}" style="padding: 5px;">
+                            <img src="{% static 'images/free-icon-font-home.png' %}" alt="Cart Icon" width="35" height="35">
+                        </a>
+                        <a class="nav-link" href="{% url 'user' %}" style="padding: 5px;">
+                            <img src="{% static 'images/free-icon-font-user.png' %}" alt="User Icon" width="35" height="35" class="me-2">
+                        </a>
+                        <a class="nav-link" href="{% url 'home' %}" style="padding: 5px;">
+                            <img src="{% static 'images/free-icon-font-shopping-cart.png' %}" alt="Cart Icon" width="35" height="35">
+                        </a>
+                    </div>
+                </div>
+            </nav>
+            
                 
-
                 
-            </div>
         </div>
     </nav>
 
