--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 
-                <a href="#" class="text-white hover:text-gray-300 transition-colors p-1">
+                <a href="{% url 'user_profile' %}" class="text-white hover:text-gray-300 transition-colors p-1">
                     <i class="fa-solid fa-user text-xl"></i> </a>
                 
                 <a href="#" class="text-white hover:text-gray-300 transition-colors p-1 relative">
