--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,4 +1,5 @@
 {% extends "shop/_layout.html" %}
+{% load static %}
 
 {% block title %}Головна сторінка{% endblock %}
 
@@ -6,7 +7,7 @@
 
 {% include 'shop/_promo_carousel.html' %}
 
-<h2 class="text-xl font-bold mb-4">Продукти</h2>
+<h2 class="text-xl font-bold mb-4" style="margin: 30px;">Продукти</h2>
 
 <div class="overflow-x-auto ml-8">
     <div class="flex space-x-4 pb-4">
@@ -19,9 +20,9 @@
             </div>
 
             <!-- Sale Badge -->
-            {% if product.old_price and product.old_price > product.price %}
-            <div class="absolute top-2 left-2 bg-red-600 text-white text-xs font-bold px-1 rounded">-{{product.price}}%</div>
-            {% endif %}
+            
+           
+
 
             <!-- Image -->
             <img src="{{ product.get_image }}" alt="{{ product.name }}"
@@ -46,12 +47,28 @@
             </p>
 
             <!-- Price -->
-            <p class="text-base font-bold mt-1">
+           <!-- Price -->
+            <p class="text-base font-bold mt-1 flex items-center">
                 {{ product.price }} ₴
+                <img 
+                    src="{% static 'images/free-icon-font-shopping-cart2.png' %}" 
+                    alt="Cart Icon" 
+                    class="w-4 h-4 ml-1 add-to-cart-icon" 
+                    style="width: 20px; height: 20px; margin-left: 20px;" 
+                    data-product-id="{{ product.id }}"
+                    data-product-name="{{ product.name }}"
+                    data-product-price="{{ product.price }}"
+                    data-product-image="{{ product.get_image }}"
+                    data-added="false"
+                >
                 {% if product.old_price and product.old_price > product.price %}
-                    <span class="line-through text-gray-400 text-sm ml-1">{{ product.old_price }} ₴</span>
+                    <span class="line-through text-gray-400 text-sm ml-2">{{ product.old_price }} ₴</span>
                 {% endif %}
             </p>
+
+
+
+
 
             <!-- Cart Icon -->
             <div class="mt-2 text-right">
